[project]
name = "gdstk"
version = "0.9.49"
authors = [{name = "Lucas H. Gabrielli", email = "heitzmann@gmail.com"}]
description = "Python module for creation and manipulation of GDSII files."
readme = "README.md"
keywords = ["GDSII", "OASIS", "CAD",  "layout"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Typing :: Typed",
]
license = {file = "LICENSE"}
dependencies = [
    "numpy",
    "typing_extensions; python_version < '3.11'"
]
requires-python = ">=3.8"

[project.optional-dependencies]
docs = ["sphinx", "sphinx_rtd_theme", "sphinx-inline-tabs", "matplotlib"]

[project.urls]
documentation = "https://heitzmann.github.io/gdstk/"
repository = "https://github.com/heitzmann/gdstk"
changelog = "https://github.com/heitzmann/gdstk/blob/main/CHANGELOG.md"

[tool.black]
line-length = 100

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "numpy; platform_system=='Darwin'",
    "oldest-supported-numpy; platform_system!='Darwin'",
]

[tool.tbump]

[[tool.tbump.before_commit]]
cmd = "git add CHANGELOG.md"
name = "create & check changelog"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "include/gdstk/gdstk.hpp"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[tool.tbump.version]
current = "0.9.49"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

